--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </section>
 
         <footer>
-            <span>Copyright 2020 - GoingToInternet</span>
+            <span>Copyright 2021 - Waseem Ahmad</span>
         </footer>
 
 
